Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-boup-service
  namespace: biboup
spec:
  selector:
    app: springboot-app
  ports:
  - port: 80
    targetPort: 8080
